# rust-music-study

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  TODO.md  mise.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.zed/: settings.json
src/: chord.rs  interval.rs  intervals.rs  lib.rs  main.rs  note.rs  ops.rs  scales.rs
src/chord/: chord.rs  mod.rs  tetrad.rs  triad.rs  util.rs
src/cli/: mod.rs  scales.rs
src/modes/: diatonic.rs  harmonic_minor.rs  mod.rs
src/scales/: degree.rs  diatonic.rs  generator.rs  harmonic_minor.rs  helper.rs  mod.rs  modes.rs  util.rs
