[package]
name = "musicionist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4.6.0", features = ["derive"] }
inquire = "0.7"

[dev-dependencies]
rstest = "0.23"
